# Fundamentos-C

./: .gitignore  CMakeLists.txt  README.md  calc.c  do-while  for  fundamento1.c  if  input  math  math.c  media-nota  sizeof  switch
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
cadastro-aluno/: cadastro-aluno.c
calc/: calc.c  casting.c
condicional/: if.c  switch.c  ternario.c
fundamentos/: fundamento1.c
input-output/: README.md  index.c  input.c
matriz/: matriz.c  matriz.h  matriz_2.c  matriz_2.h  matriz_loop.c  matriz_loop.h  programa_matriz
media-notas/: media-nota.c
modify-type/: modify-type.c  sizeof.c
repetição/: do-while.c  for.c  while.c
super-trunfo/: super-trunfo.c
