cmake_minimum_required(VERSION 3.30)
project(fundamentos_c)

set(CMAKE_CXX_STANDARD 14)

add_executable(fundamentos_c
    .idea/.gitignore
    .idea/editor.xml
    .idea/fundamentos-c.iml
    .idea/git_toolbox_blame.xml
    .idea/modules.xml
    .idea/vcs.xml
    .idea/workspace.xml
    .gitignore
    README.md)
